# NextEngine

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE_JEU.md  ARCHITECTURE_PRODUCTION_CLAUDE.md  AUDIT.md  AUDIT_UI_WEB_V1.md  AUDIT_V1.md  AUDIT_WEB_PLATFORM_IMPROVMENTS.md  BILAN.md  CLAUDE.md  CMakeLists.txt  HANDOVER_CLAUDE.md  MARKETING.md  PARTICLE_SYSTEM.md  PLAN_ANIMATION.md  PLAN_CHARACTER_CAMERA.md  PLAN_EDITOR_REFACTOR.md  PLAN_INTEGRATION_SAIDA.md  PLAN_LIVE_EDIT_WEB.md  PLAN_RHI.md  PLAN_RMLUI_QUICKJS.md  PLAN_SAIDA_ENGINE_UPDATE.md  PLAN_SCENARIO_SYSTEM.md  PLAN_V1.md  PLAN_V1_ENGINE.md  PLAN_WEB_EXPORT.md  Points_faibles.md  README.md  REFACTOR_V1.md  RENDU_AVANCE.md  ROADMAP.md  SPEC.md  TODO.md  WEB_UI.md  XR_OPENXR.md  animation_audit.md  build_editor_ui.txt  build_editor_ui2.txt  (+20 more)
.claude/: launch.json
.github/workflows/: ci.yml  web-artifacts.yml
BeachDemo/: BeachDemo.neproj  BeachDemo.saidaproj  asset_registry.json  gen_beach.py
BeachDemo/scenes/: beach.scene
GTAClone/: GTAClone.neproj  GTAClone.saidaproj  asset_registry.json  gen_scene.py
GTAClone/scenes/: main.scene
Global Illumination Conception/: GI_DESIGN_DOC.md
MyGame/: .play_mode_backup.scene  MyGame.neproj  MyGame.saidaproj  asset_registry.json
MyGame/scenes/: CharacterTest.scene  XRSetup.scene  main.scene  port.scene
WitnessGame/: README.md  WitnessGame.saidaproj  asset_registry.json  gen_character.py  gen_witness.py
WitnessGame/anim/: intro.sseq  locomotion.sgraph
WitnessGame/scenes/: arena.scene  hub.scene
WitnessGame/scripts/: door.js  e2e_driver.js  game_state.mjs  hud.js  pickup.js  prompt.js  savepoint.js
assets/fx/: explosion.nefx  explosion.saidafx  fire.nefx  fire.saidafx  magic.nefx  magic.saidafx  rain.nefx  rain.saidafx  smoke.nefx  smoke.saidafx  snow.nefx  snow.saidafx
autolod/: .gitignore  CMakeLists.txt  README.md
autolod/src/: baker.cpp  baker.h  main.cpp
compliance/: assets.json  components.json
compliance/licenses/: MIT.txt  Zlib.txt
docker/: saida-tool.Dockerfile  saida-tool.Dockerfile.dockerignore
docs/: PUBLIC_COMPATIBILITY.md  V1_KNOWN_LIMITATIONS.md  WITNESS_GAME.md  release-support.md
packaging/: WitnessGame.nsi
shaders/: bake.frag  bake.vert  bloom_downsample.frag  bloom_upsample.frag  cartoon_water.frag  cartoon_water.vert  culling.comp  ddgi_blend.comp  ddgi_borders.comp  ddgi_common.glsl  ddgi_trace.comp  debug_line.frag  debug_line.vert  lighting.glsl  lightmap_dilate.frag  outline.frag  outline.vert  particle_emit.comp  particle_finalize.comp  particle_init.comp  particle_prepare.comp  particle_render.frag  particle_render.vert  particle_sim.comp  shader.frag  shader.vert  shadow.vert  skinning.glsl  skybox.frag  skybox.vert  tonemap.frag  tonemap.vert  ui.frag  ui.vert  unlit.frag  voxelize.frag  voxelize.vert  water.frag  water.vert  water_common.glsl  (+3 more)
src/: Engine.cpp  Engine.hpp  main.cpp
src/audio/: AudioManager.cpp  AudioManager.hpp  AudioSourceBehaviour.cpp  AudioSourceBehaviour.hpp  AudioUsage.cpp
src/authoring/: EngineManifest.cpp  EngineManifest.hpp  SaidaOp.cpp  SaidaOp.hpp  SaidaOpApplier.cpp  SaidaOpApplier.hpp  SceneSnapshot.cpp  SceneSnapshot.hpp
src/behaviours/: CameraFollowBehaviour.cpp  CameraFollowBehaviour.hpp  CharacterBehaviour.cpp  HealthBehaviour.cpp  LODGroupBehaviour.cpp  RotatorBehaviour.cpp  RotatorBehaviour.hpp  SpawnerBehaviour.cpp  SpawnerBehaviour.hpp  StateMachineBehaviour.cpp
src/cli/: AutoLODBridge.cpp  AutoLODBridge.hpp  MeshoptGlbExporter.cpp
src/core/: AtomicFile.cpp  AtomicFile.hpp  BuildIdentity.hpp.in  Camera.cpp  Camera.hpp  CrashReporter.cpp  CrashReporter.hpp  Easing.hpp  EngineVersion.hpp  FileWatcher.cpp  FileWatcher.hpp  FormatVersions.hpp  Input.cpp  Input.hpp  InputEnums.hpp  InputGamepad.hpp  InputLimits.hpp  InputProfile.cpp  InputProfile.hpp  InputTouch.hpp  Log.hpp  Paths.cpp  Paths.hpp  PlatformCaps.cpp  PlatformCaps.hpp  Profiler.cpp  Profiler.hpp  Reflection.cpp  Reflection.hpp  ReflectionFwd.hpp  Signal.hpp  Time.hpp  Window.cpp  Window.hpp
src/editor/: BuildController.cpp  BuildController.hpp  BuildExporter.cpp  BuildExporter.hpp  (+25 more)
tests/: AnimationBench.cpp  AnimationCookerTests.cpp  AnimationCoreTests.cpp  AnimationInstanceTests.cpp  AnimationPlaybackTests.cpp  AnimationRetargetTests.cpp  AnimationSequenceTests.cpp  AssetLoaderTests.cpp  AtomicFileTests.cpp  AuthoringOpTests.cpp  CartoonWaterTests.cpp  CollisionAutoShapeTest.cpp  CompatCorpusTests.cpp  CoreTests.cpp  CrashReporterTests.cpp  EditorCommandTests.cpp  EditorDocumentTests.cpp  ExeMetadataTests.cpp  FormatVersionTests.cpp  GameplayPrimitiveTests.cpp  GpuDrivenContractTests.cpp  HostileAssetTests.cpp  InputGamepadTests.cpp  InputProfileTests.cpp  InputTouchTests.cpp  JsCrossContextTests.cpp  JsGameplayBindingTests.cpp  JsPermissionPolicyTests.cpp  JsRuntimeSafetyTests.cpp  JsSignalBindingTests.cpp  JsStorageFlushTests.cpp  JsTimerBindingTests.cpp  McpServerTests.cpp  McpToolRegistryTests.cpp  MeshoptExportTests.cpp  ParticleEffectTests.cpp  PhysicsCharacterTest.cpp  PhysicsQueryJointTests.cpp  PlayerStorageTests.cpp  ProjectRenameTests.cpp  (+12 more)
tools/: build_witness_installer.ps1  code_metrics.sh  engine_release_manifest.ps1  gamepad_probe.cpp  generate_release_compliance.ps1  git_worktree_state.ps1  mcp-stdio-bridge.mjs  new_deterministic_zip.ps1  package_release_symbols.ps1  validate_windows_dependencies.ps1  verify_deterministic_zip.ps1  verify_engine_release.ps1  verify_release_symbols.ps1  verify_witness_installer.ps1  verify_witness_web.ps1  verify_witness_web_ci.sh  verify_witness_windows.ps1  vulkan_preflight.cpp  witness_e2e.sh  witness_editor_build.sh  witness_editor_play.sh  witness_release_candidate.ps1  witness_web_stage.sh
web/: build_authoring_wasm.sh  build_web.sh  build_web_player.sh  compress_brotli.sh  edit_echo_server.py  serve.py
web/authoring/: CMakeLists.txt  authoring_wasm.cpp  smoke_test.mjs
web/player/: CMakeLists.txt  game.saida  main.cpp  shell.html
web/runtime/: CMakeLists.txt  main.cpp  shell.html
website/: index.html  llms.txt  main.js  style.css
(+488 files in other folders)
